Fix some POJO marshalling